fixed initial scroll count added progress display (percentage)

--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@ a.pledge {
   <div id="kwh" class="person kwh">
     <div class="spacer"></div>
     <div class="padder"></div>
-    <div id="title" class="title" style="padding-top:80px;"><h1>One Nation, One Day of Energy </h1><span id="counter" class="counter"></span></div>
+    <div id="title" class="title" style="padding-top:80px;">
+      <h1>One Nation, One Day of Energy </h1>
+      <span id="counter" class="counter"></span>
+      <div id="scrollpercent" class="scrollpercent">0.000000%</div>
+    </div>
     <div data-background="black" class="subtitle">
       
         <p class="scroll-down" style="padding:50px 0 20px 0;font-size:1.4em;">From lightbulbs to EVs, what does a full day of U.S. energy use look like? </p><br /> <p class="scroll-down" style="padding:0 0 20px 0;">Scroll and find out!</p>
