created an svg and more tiletests

--- a/tiletest/tiletest.html
+++ b/tiletest/tiletest.html
@@ -4,9 +4,13 @@
         <link rel="stylesheet" href="tiletest.css">
     </head>
     <body>
+    <div id="background">
         <div class="resizeable_tiling"></div>
-        <div class="tiling">
+        <div class="tiling" id="nested">
             <div class="resizeable_tiling"></div>
         </div>
+        <div class="tiling">
+    </div>
     </body>
 </html>
+
