--- a/tiletest/svg_gradient.html
+++ b/tiletest/svg_gradient.html
@@ -8,12 +8,13 @@
         <svg viewBox="0 0 1 1" preserveAspectRatio="none">
             <title>test gradient</title>
             <defs>
-              <linearGradient id="g" x1="0%" x2="100%" y1="0%" y2="0%">
+              <linearGradient id="testgradient" x1="0%" x2="100%" y1="0%" y2="0%">
                 <stop stop-color="blue" offset="0" />
                 <stop stop-color="red" offset="1" />
               </linearGradient>
             </defs>
-            <rect fill="url('#g')" width="100%" height="100%" />
+            <rect fill="url('#testgradient')" width="100%" height="100%" />
         </svg>
     </body>
 </html>
+
