dynamic counter-based positioning with scaling background gradient

--- a/tiletest/tiletest.html
+++ b/tiletest/tiletest.html
@@ -19,9 +19,9 @@
         <div class="testme" required_scrollcount="25">TESTME 25</div>
         <div class="testme" required_scrollcount="50">TESTME 50</div>
         <div class="testme" required_scrollcount="75">TESTME 75</div>
-        <div class="tiling" id="nested">
-            <div class="resizeable_tiling"></div>
-        </div>
+        <!--<div class="resizeable_tiling">
+            <div class="tiling"></div>
+        </div>-->
         <div class="testme" required_scrollcount="100">TESTME 100</div>
         <div class="tiling"></div>
     </div>
