tilesize HTML attribute kind of supporting nesting

--- a/tiletest/tiletest.html
+++ b/tiletest/tiletest.html
@@ -15,14 +15,18 @@
     </div>
     
     <div id="background">
-        <div class="resizeable_tiling" id="countme">[resize me to update counter]</div>
-        <div class="testme" required_scrollcount="25">TESTME 25</div>
-        <div class="testme" required_scrollcount="50">TESTME 50</div>
-        <div class="testme" required_scrollcount="75">TESTME 75</div>
-        <!--<div class="resizeable_tiling">
-            <div class="tiling"></div>
-        </div>-->
-        <div class="testme" required_scrollcount="100">TESTME 100</div>
+        <div class="resizeable_tiling" id="countme">[resize me to update counter]
+            <div class="testme" required_scrollcount="25">TESTME 25</div>
+            <div class="testme" required_scrollcount="50">TESTME 50</div>
+            <div class="testme" required_scrollcount="75">TESTME 75</div>
+        </div>
+        <div class="resizeable_tiling" tilesize="auto 200px">
+            <div class="tiling">
+                <div class="testme" required_scrollcount="100">TESTME 100</div>
+                <div class="testme" required_scrollcount="200">TESTME 200</div>
+                <div class="testme" required_scrollcount="400">TESTME 400</div>
+            </div>
+        </div>
         <div class="tiling"></div>
     </div>
     </body>
