--- a/tiletest/tiletest.html
+++ b/tiletest/tiletest.html
@@ -22,15 +22,22 @@
     
     <div id="background">
         <div class="resizeable_tiling">[resize me to update counter]
-            <div class="testme" required_scrollcount="25">TESTME 25</div>
-            <div class="testme" required_scrollcount="50">TESTME 50</div>
-            <div class="testme" required_scrollcount="75">TESTME 75</div>
+            <div class="testme" required_scrollcount=25>TESTME 25</div>
+            <div class="testme" required_scrollcount=50>TESTME 50</div>
+            <div class="testme" required_scrollcount=75>TESTME 75</div>
         </div>
-        <div class="resizeable_tiling" tilesize="auto 200px">
-            <div class="tiling">
-                <div name="tile2_testme1" class="testme" required_scrollcount="10">TESTME 10</div>
-                <div name="tile2_testme2" class="testme" required_scrollcount="20">TESTME 20</div>
-                <div name="tile2_testme3" class="testme" required_scrollcount="40">TESTME 40</div>
+        <div id="gradient_container">
+            <div class="resizeable_tiling" tilesize="auto 250px" iconvalue=10>
+                <div class="testme" required_scrollcount=5 >BIG 5</div>
+                <div class="testme" required_scrollcount=10>BIG 10</div>
+                <div class="testme" required_scrollcount=15>BIG 15</div>
+            </div>
+            <div class="resizeable_tiling" tilesize="auto 200px">
+                <div class="tiling">
+                    <div name="tile2_testme1" class="testme" required_scrollcount=10>TESTME 10</div>
+                    <div name="tile2_testme2" class="testme" required_scrollcount=20>TESTME 20</div>
+                    <div name="tile2_testme3" class="testme" required_scrollcount=40>TESTME 40</div>
+                </div>
             </div>
         </div>
         <div class="tiling"></div>
