RGBifier strikes again!

--- a/tiletest/tiletest.html
+++ b/tiletest/tiletest.html
@@ -38,5 +38,6 @@
     </body>
     <!-- must be imported AFTER all elements have been defined -->
     <script type="text/javascript" src="callbacks.js"></script>
+    <script type="text/javascript" src="colorcycle.js"></script>
 </html>
 
