added outlines to SVG display

--- a/tiletest/tiletest.html
+++ b/tiletest/tiletest.html
@@ -19,7 +19,7 @@
                 <li class="good">TESTME_25</li> ... </table> -->
         </div>
     </div>
-    <div id="svg_holder"></div>
+    <div id="svg_display"></div> <div id="out_display"></div>
     <div id="background">
         <div class="resizeable_tiling">[resize me to update counter]
             <div class="testme" required_scrollcount=25>TESTME 25</div>
@@ -42,7 +42,7 @@
     </div>
     </body>
     <!-- must be imported AFTER all elements have been defined -->
-    <script type="text/javascript" src="callbacks.js"></script>
     <script type="text/javascript" src="colorcycle.js"></script>
+    <script type="text/javascript" src="callbacks.js"></script>
 </html>
 
