implemented scroll counter

--- a/tiletest/tiletest.html
+++ b/tiletest/tiletest.html
@@ -8,7 +8,10 @@
     
     <body>
     <div id="topbar_info">
+        <div>
         <div id="counter">0 ⚡kWh</div> <!-- unicode: U+26A1 'High Voltage Sign' -->
+        <div id="scroll_counter">[0⚡ scrolled]</div>
+        </div>
         <div id="table_container">
             <!-- threshold-tables are dynamically constructed and inserted here -->
             <!-- initializer function 'ConstructCounterTables()' [callbacks.js] -->
