improved parsing  for tilesize attributes scaling scrollcount-position according to iconvalue

--- a/energyscroller.html
+++ b/energyscroller.html
@@ -43,9 +43,9 @@
             </div>
             
             <div class="resizeable_tiling" tilesize="auto 250px" iconvalue=5>
-                <div class="testme" required_scrollcount=5 >BIG 5</div>
-                <div class="testme" required_scrollcount=10>BIG 10</div>
-                <div class="testme" required_scrollcount=15>BIG 15</div>
+                <div class="testme" required_scrollcount=50 >BIG 50</div>
+                <div class="testme" required_scrollcount=100>BIG 100</div>
+                <div class="testme" required_scrollcount=150>BIG 150</div>
             </div>
             <div name="testname" class="resizeable_tiling" tilesize="auto 200px">
                 <div class="tiling">
